--- a/uurukg/app/templates/search_result.html
+++ b/uurukg/app/templates/search_result.html
@@ -1,5 +1,3 @@
-
-
 {% extends 'base.html' %}
 {% block page_content %}
 
@@ -7,20 +5,22 @@
 {% if person %}
 
 
-
 {% for item in person %}
-<a href="/dopinfo/{{item.id}}" class="list-group-item list-group-item-action">
-    <div class="media">
-      <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
-      <div class="media-body">
-          <h6 class="mt-0 text-left text-warning">{{ item.name }}</h6>
+<div class="col-8 mx-auto">
+    <h1 class="my-5">Результаты поиска:</h1>
+    <a href="/dopinfo/{{item.id}}" class="list-group-item list-group-item-action">
+        <div class="media">
+            <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
+            <div class="media-body">
+                <h2 class="btn">{{ item.name }}</h2>
 
-        <h4 class="mt-0 text-left">{{ item.birth }}</h4>
-        <p class="mb-1">{{ item.department }}</p>
-<!--        <small>{{ item.criminal_record }}</small>-->
-      </div>
-    </div>
-  </a>
+                <h4 class="mt-0 text-left">{{ item.birth }}</h4>
+                <p class="mb-1">{{ item.department }}</p>
+                <!--        <small>{{ item.criminal_record }}</small>-->
+            </div>
+        </div>
+    </a>
+</div>
 <!--<a href="/dopinfo/{{i.id}}">-->
 <!--<div class="card mb-3" style="max-width: 540px;">-->
 <!--  <div class="row g-0">-->
