--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -110,7 +110,7 @@
 <!--                <a href="/release/all/" class="nav-item nav-link">Пресс-релизы</a>-->
                  <a href="/departments/all" class="nav-item nav-link">{% trans "Пресс-релизы"%}</a>
                 <a href="/analitika/all" class="nav-item nav-link">{% trans "Аналитика" %}</a>
-                <a href="/reporter/all" class="nav-item nav-link">{% trans Осведомители %}</a>
+                <a href="/reporter/all" class="nav-item nav-link">{% trans "Осведомители" %}</a>
 
             </div>
             <div class="input-group ml-auto d-none d-lg-flex text-right" style="width: 100%; max-width: 300px;">
