--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -16,7 +16,7 @@
                     <div class="overlay">
                         <div class="mb-2">
                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2 text-truncate" href="post/{{i.id}}">{{i.title}}</a>
-                            <a class="text-white" href="">{{i.created_date}}</a>
+<!--                            <a class="text-white" href="">{{i.created_date}}</a>-->
                         </div>
                     </div>
                 </div>
