--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="section-title text-center">
-                                    <h4 class="m-0 text-uppercase text-center font-weight-bold" id="economica">Аналитика</h4>
+                                    <h4 class="m-0 text-uppercase text-center font-weight-bold" id="economica">Пресс-релизы</h4>
                                 </div>
                             </div>
                             {% for i in news %}
@@ -24,6 +24,7 @@
                                         <div class="mb-2">
                                             <a class="text-body" href="post/{{i.id}}">
                                                 <small>{{ i.created_date }}</small></a>
+                                                <small>{{ i.departments.title }}</small></a>
                                         </div>
                                       <h4>{{ i.title }}</h4>
                                         <p class="m-0">{{ i.description }}</p>
