--- a/uurukg/app/templates/release_detail.html
+++ b/uurukg/app/templates/release_detail.html
@@ -3,12 +3,68 @@
 {% load embed_video_tags %}
 {% load static %}
 
-<div class="py-5">
-<h2 class="text-center"><small class="text-warning">{{ press_release.departments.title }}</small>: {{press_release.title}}</h2>
-<div class="row mx-5 text-dark">{{ press_release.overview | safe }}
-        <img src="{{ press_release.image.url }}" class="img-fluid rounded-start" style="width: 400px;">
+<!--<div class="py-5">-->
+<!--<h2 class="text-center"><small class="text-warning">{{ press_release.departments.title }}</small>: {{press_release.title}}</h2>-->
+<!--<div class="row mx-5 text-dark">{{ press_release.overview | safe }}-->
+<!--        <img src="{{ press_release.image.url }}" class="img-fluid rounded-start" style="width: 400px;">-->
 
+<!--</div>-->
+
+<!--</div>-->
+
+<div class="container-fluid mx-auto">
+    <div class="row">
+        <div class="col-lg-7 mx-auto">
+            <h2 class="text-center"><small class="text-warning">{{ press_release.departments.title }}</small>: {{press_release.title}}</h2>
+            <div class="col">
+                <div class="text-dark"> {{ press_release.overview | safe }}</div>
+            </div> <div class="col">
+               <img src="{{ press_release.image.url | safe }}">
+            </div>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
+            <div class="row mx-5">
+                <div class="row mx-auto pb-5 pt-5">
+                    <form action="/blog/search/" method="post">
+                        {% csrf_token %}
+                        <fieldset>
+                            <legend>Коррупционеры и ОПГ</legend>
+                            <p>Поиск по ФИО:</p>
+                            <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <p class="mt-3">Поиск по должности:</p>
+                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <br>
+                            <input type="submit" class="mt-3 btn" name="go" id="go" value="Поиск..."/>
+                        </fieldset>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="d-flex justify-content-center">
+    <div id="carouselExampleControls" class="carousel slide col-6 text-center pt-5" data-ride="carousel">
+        <div class="carousel-inner">
+            {% for i in press_release.newsImage.all %}
+           <div class="carousel-item {% if forloop.first %}active{% endif %}">
+        <a href="{{ i.image.url }}" data-lightbox="carousel">
+          <img class="d-block w-100" src="{{ i.image.url}}">
+        </a>
+      </div>
+            {% endfor %}
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 </div>
 
-</div>
 {% endblock %}
