--- a/uurukg/app/templates/all_news.html
+++ b/uurukg/app/templates/all_news.html
@@ -3,7 +3,7 @@
 {% load embed_video_tags %}
 {% load static %}
 
-{% load 118n movie_tag %}
+{% load i18n %}
 <div class="container-fluid pt-5">
             <div class="container">
                 <div class="row">
