--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -66,7 +66,7 @@
                                     <div class="bg-white border border-top-0 p-4">
                                         <div class="mb-2">
                                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                               href="##">{{ i.category.title }}</a>
+                                               href="news/filter/all/{{i.category.id}}">{{ i.category.title }}</a>
                                             <a class="text-body" href="post/{{i.id}}">
                                                 <small>{{ i.created_date }}</small></a>
                                         </div>
