--- a/uurukg/app/templates/detail.html
+++ b/uurukg/app/templates/detail.html
@@ -5,6 +5,7 @@
 <div class="container-fluid mx-auto">
     <div class="row">
         <div class="col-lg-7 mx-auto">
+            <h4>{{ post.category.title }}</h4>
             <h2 class="text-center">{{ post.title }}</h2>
             <div class="col">
                 <div class="text-dark"> {{ post.overview | safe }}</div>
