--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -12,7 +12,7 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="section-title text-center">
-                                    <h4 class="m-0 text-uppercase text-center font-weight-bold" id="economica">Пресс-релизы</h4>
+                                    <h4 class="m-0 text-uppercase text-center font-weight-bold" id="economica">Пресс-релизы: {{ news.0.departments.title }}</h4>
                                 </div>
                             </div>
                             {% for i in news %}
