--- a/uurukg/app/templates/sng_detail.html
+++ b/uurukg/app/templates/sng_detail.html
@@ -6,6 +6,7 @@
 <div class="container-fluid mx-auto">
     <div class="row">
         <div class="col-lg-7 mx-auto">
+            <h4>Новости СНГ</h4>
             <h2 class="text-center">{{ newssng.title }}</h2>
             <div class="col">
                 <div class="text-dark"> {{ newssng.overview | safe }}</div>
