--- a/uurukg/app/templates/detail.html
+++ b/uurukg/app/templates/detail.html
@@ -9,7 +9,7 @@
             <h2 class="text-center">{{ post.title }}</h2>
             <div class="col">
                 <div class="text-dark"> {{ post.overview | safe }}</div>
-                 <img src="{{ post.image.url | safe }}">
+<!--                 <img src="{{ post.image.url | safe }}">-->
             </div>
         </div>
         <div class="col-1"></div>
@@ -35,27 +35,38 @@
         </div>
     </div>
 </div>
-<div class="d-flex justify-content-center">
-    <div id="carouselExampleControls" class="carousel slide col-6 text-center pt-5" data-ride="carousel">
-        <div class="carousel-inner">
-            {% for i in post.newsImage.all %}
-           <div class="carousel-item {% if forloop.first %}active{% endif %}">
-        <a href="{{ i.image.url }}" data-lightbox="carousel">
-          <img class="d-block w-100" src="{{ i.image.url}}">
-        </a>
-      </div>
-            {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
+<!--<div class="d-flex justify-content-center">-->
+<!--    <div id="carouselExampleControls" class="carousel slide col-6 text-center pt-5" data-ride="carousel">-->
+<!--        <div class="carousel-inner">-->
+<!--            {% for i in post.newsImage.all %}-->
+<!--           <div class="carousel-item {% if forloop.first %}active{% endif %}">-->
+<!--        <a href="{{ i.image.url }}" data-lightbox="carousel">-->
+<!--          <img class="d-block w-100" src="{{ i.image.url}}">-->
+<!--        </a>-->
+<!--      </div>-->
+<!--            {% endfor %}-->
+<!--        </div>-->
+<!--        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">-->
+<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
+<!--            <span class="sr-only">Previous</span>-->
+<!--        </a>-->
+<!--        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">-->
+<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
+<!--            <span class="sr-only">Next</span>-->
+<!--        </a>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="gallery">-->
+<!-- <div> {{ post.photos | safe}}</div>-->
+<!-- <img src="{{ post.photos | safe }}" alt="{{ photo.name }}">-->
+<!--</div>-->
+<!-- <div class="gallery">-->
+
+<!--    {% for photo in post.photos %}-->
+<!--      <img src="{{ photo.url }}" alt="{{ photo.name }}">-->
+<!--    {% endfor %}-->
+<!--  </div>-->
+
  <script>
  // noinspection JSUnresolvedVariable
   $('.carousel-inner').on('click', 'img', function() {
