--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -24,9 +24,10 @@
 
     <!-- Libraries Stylesheet -->
     <link href="{%static 'lib/owlcarousel/assets/owl.carousel.min.css' %}" rel="stylesheet">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+<!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
-    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
+<!--    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css" />
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{%static 'css/style.css' %}" rel="stylesheet">
@@ -136,16 +137,26 @@
 <!-- Footer End -->
 <!-- Back to Top -->
 <a href="#" class="btn btn-primary btn-square back-to-top"><i class="fa fa-arrow-up"></i></a>
-<!-- JavaScript Libraries -->
-
-<!-- Main News Slider Start -->
 
 
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!--<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>-->
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 <script src="{% static 'lib/easing/easing.min.js' %}"></script>
 <script src="{% static 'lib/owlcarousel/owl.carousel.min.js' %}"></script>
-<script src="{% static 'js/lightbox.min.js' %}"></script>
+ <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
+
+
+
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>-->
+
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>-->
+
+</body>
+</html>
+
 
 <!-- Template Javascript -->
 <script src="{% static 'js/main.js' %}"></script>
