--- a/uurukg/app/templates/detail.html
+++ b/uurukg/app/templates/detail.html
@@ -2,120 +2,92 @@
 {% block page_content %}
 {% load embed_video_tags %}
 {% load static %}
-<div class="container-fluid mx-auto">
-    <div class="row">
-        <div class="col-lg-7 mx-auto">
-            <h4>{{ post.category.title }}</h4>
-            <h2 class="text-center">{{ post.title }}</h2>
-            <div class="col">
-                <div class="text-dark"> {{ post.overview | safe }}</div>
-<!--                 <img src="{{ post.image.url | safe }}">-->
+
+    <div class="container-fluid mx-auto">
+        <div class="row">
+            <div class="col-lg-7 mx-auto">
+                <h4>{{ post.category.title }}</h4>
+                <h2 class="text-center">{{ post.title }}</h2>
+                <div class="col">
+                    <div class="text-dark"> {{ post.overview | safe }}</div>
+    <!--                 <img src="{{ post.image.url | safe }}">-->
+                </div>
             </div>
-        </div>
-        <div class="col-1"></div>
-        <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
-            <div class="row mx-5">
-                <div class="row mx-auto pb-5 pt-5">
-                    <form action="/blog/search/" method="post">
-                        {% csrf_token %}
-                        <fieldset>
-                            <legend>Коррупционеры и ОПГ</legend>
-                            <p>Поиск по ФИО:</p>
-                            <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
-                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <p class="mt-3">Поиск по должности:</p>
-                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"
-                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                            <br>
-                            <input type="submit" class="mt-3 btn" name="go" id="go" value="Поиск..."/>
-                        </fieldset>
-                    </form>
+            <div class="col-1"></div>
+            <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
+                <div class="row mx-5">
+                    <div class="row mx-auto pb-5 pt-5">
+                        <form action="/blog/search/" method="post">
+                            {% csrf_token %}
+                            <fieldset>
+                                <legend>Коррупционеры и ОПГ</legend>
+                                <p>Поиск по ФИО:</p>
+                                <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
+                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                                <p class="mt-3">Поиск по должности:</p>
+                                <input type="text" name="position" placeholder="Должность..." class="responsive-input"
+                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                                <br>
+                                <input type="submit" class="mt-3 btn" name="go" id="go" value="Поиск..."/>
+                            </fieldset>
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
+
+
+
+<div class="container">
+  <h1>My Image Gallery</h1>
+
+  <div class="row gallery">
+      {% for p in post.newsImage.all %}
+        <div class="col-lg-3 col-md-4 col-sm-6">
+          <a href="{{ p.image.url }}" data-fancybox="gallery">
+            <img src="{{ p.image.url }}" alt="Image 1">
+          </a>
+        </div>
+      {% endfor %}
+
+
+  </div>
+
 </div>
-<!--<div class="d-flex justify-content-center">-->
-<!--    <div id="carouselExampleControls" class="carousel slide col-6 text-center pt-5" data-ride="carousel">-->
-<!--        <div class="carousel-inner">-->
-<!--            {% for i in post.newsImage.all %}-->
-<!--           <div class="carousel-item {% if forloop.first %}active{% endif %}">-->
-<!--        <a href="{{ i.image.url }}" data-lightbox="carousel">-->
-<!--          <img class="d-block w-100" src="{{ i.image.url}}">-->
-<!--        </a>-->
-<!--      </div>-->
-<!--            {% endfor %}-->
-<!--        </div>-->
-<!--        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">-->
-<!--            <span class="carousel-control-prev-icon" aria-hidden="true"></span>-->
-<!--            <span class="sr-only">Previous</span>-->
-<!--        </a>-->
-<!--        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">-->
-<!--            <span class="carousel-control-next-icon" aria-hidden="true"></span>-->
-<!--            <span class="sr-only">Next</span>-->
-<!--        </a>-->
-<!--    </div>-->
-<!--</div>-->
-<!--<div class="gallery">-->
-<!-- <div> {{ post.photos | safe}}</div>-->
-<!-- <img src="{{ post.photos | safe }}" alt="{{ photo.name }}">-->
-<!--</div>-->
-<!-- <div class="gallery">-->
-
-<!--    {% for photo in post.photos %}-->
-<!--      <img src="{{ photo.url }}" alt="{{ photo.name }}">-->
-<!--    {% endfor %}-->
-<!--  </div>-->
-
- <script>
- // noinspection JSUnresolvedVariable
-  $('.carousel-inner').on('click', 'img', function() {
-    var modal = $('<div class="modal" tabindex="-1" role="dialog"></div>');
-    var modalDialog = $('<div class="modal-dialog modal-lg" role="document"></div>');
-    var modalContent = $('<div class="modal-content"></div>');
-    var modalBody = $('<div class="modal-body text-center"></div>');
 
 
-    var enlargedImage = $('<img class="img-fluid">');
-    enlargedImage.attr('src', $(this).attr('src'));
 
-    modalBody.append(enlargedImage);
-    modalContent.append(modalBody);
-    modalDialog.append(modalContent);
-    modal.append(modalDialog);
-
-
-    $('body').append(modal);
-    modal.modal('show');
-
-    modal.on('hidden.bs.modal', function() {
-      modal.remove();
-    });
+</div>
+<!-- {% for p in post.newsImage.all %}-->
+<!--<a href="{{ p.image.url }}" data-fancybox="gallery">-->
+<!--  <img src="{{ p.image.url }}" alt="Image">-->
+<!--</a>-->
+<!--{% endfor %}-->
 
 
-    var carouselId = $(this).closest('.carousel').attr('id');
-    var currentIndex = $(this).closest('.carousel-item').index();
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>-->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css" />
+<script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 
-    var prevButton = $('<a class="carousel-control-prev" href="#' + carouselId + '" role="button" data-slide="prev"></a>');
-    prevButton.append('<span class="carousel-control-prev-icon" aria-hidden="true"></span>');
-    prevButton.append('<span class="sr-only">Previous</span>');
+<script>
+$('[data-fancybox="gallery"]').fancybox({
+  // Опции Fancybox
+});
 
-    var nextButton = $('<a class="carousel-control-next" href="#' + carouselId + '" role="button" data-slide="next"></a>');
-    nextButton.append('<span class="carousel-control-next-icon" aria-hidden="true"></span>');
-    nextButton.append('<span class="sr-only">Next</span>');
+// Открыть изображение при загрузке страницы
+$(document).ready(function() {
+  $('[data-fancybox="gallery"]').eq(0).trigger('click');
+});
 
-    modalBody.append(prevButton);
-    modalBody.append(nextButton);
-
-    prevButton.on('click', function(e) {
-      e.stopPropagation();
-      $('#' + carouselId).carousel('prev');
-    });
-
-    nextButton.on('click', function(e) {
-      e.stopPropagation();
-      $('#' + carouselId).carousel('next');
-    });
-  });
+// Закрыть изображение
+function closeFancybox() {
+conole.log('закрыть')
+  $.fancybox.close();
+}
 </script>
+
+
 {% endblock %}
