--- a/uurukg/app/templates/dopinfo.html
+++ b/uurukg/app/templates/dopinfo.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-md-8">
       <div class="card-body">
-        <h5 class="card-title"><strong>Инициалы: </strong>{{ govno.name }}</h5>
+        <h5 class="card-title"><strong>ФИО: </strong>{{ govno.name }} {{ item.surname }}</h5>
         <h5 class="card-title"><strong>Дата Рождения: </strong>{{ govno.birth }}</h5>
         <h6 class="card-text"><strong>Должность: </strong>{{ govno.position }}</h6>
         <h6 class="card-text"><h6><strong>Основная деятельность: </strong>{{ govno.resume | safe }}</h6>
