--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -5,10 +5,18 @@
 {% block page_content %}
 {% load i18n %}
 
+  <style>
+    .owl-carousel .item img {
+      display: block;
+      width: 100%;
+      height: auto;
+    }
+  </style>
+
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-7 px-0">
-            <div class="owl-carousel main-carousel position-relative">
+                <div class="owl-carousel main-carousel position-relative">
                 {% for i in top %}
                 <div class="position-relative overflow-hidden text-truncate" style="height: 500px;">
                     <!--                    <img class="img-fluid h-100" src="{% static 'img/news-800x500-1.jpg' %}" style="object-fit: cover;">-->
@@ -35,7 +43,9 @@
 
                             <legend>Коррупционеры и ОПГ</legend>
                             <p>Поиск по ФИО:</p>
-                            <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
+                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"
                                    onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
                             <p class="mt-3">Поиск по должности:</p>
                             <input type="text" name="position" placeholder="Должность..." class="responsive-input"
