--- a/uurukg/app/templates/search_result.html
+++ b/uurukg/app/templates/search_result.html
@@ -12,7 +12,7 @@
         <div class="media">
             <img src="{{ item.image.url }}" class="mr-3" alt="Изображение новости 1" width="200px">
             <div class="media-body">
-                <h2 class="btn">{{ item.name }}</h2>
+                <h2 class="btn">{{ item.name }} {{ item.surname }}</h2>
 
                 <h4 class="mt-0 text-left">{{ item.birth }}</h4>
                 <p class="mb-1">{{ item.department }}</p>
