--- a/uurukg/app/templates/all_news.html
+++ b/uurukg/app/templates/all_news.html
@@ -45,10 +45,10 @@
 
 <div class="col-lg-10 text-right mb-3 mt-3">
   {% if page.has_previous %}
-        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Пред.</a>
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">{% trans "Пред." %}</a>
     {% endif %}
 
-    <a href="?page=1" class="btn btn-secondary">Первая</a>
+    <a href="?page=1" class="btn btn-secondary">{% trans "Первая" %}</a>
 
     {% for num in news.paginator.page_range %}
 
@@ -59,11 +59,10 @@
         {% endif %}
     {% endfor %}
 
-    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Последняя</a>
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">{% trans "След." %}</a>
 
     {% if page.has_next %}
-        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">След.</a>
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">{% trans "След." %}</a>
     {% endif %}
-    </div>
-
+</div>
 {% endblock %}
