--- a/uurukg/app/templates/analitika.html
+++ b/uurukg/app/templates/analitika.html
@@ -1,8 +1,6 @@
-
-
 {% extends 'base.html' %}
 {% block page_content %}
-
+{% load i18n %}
 {% load static %}
 
 <div class="container-fluid pt-5">
@@ -32,7 +30,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center btn">
-                                            <a href="/post/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"  >Читать поробнее...</a>
+                                            <a href="/post/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2">{% trans 'Читать подробнее' %}...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -45,10 +43,10 @@
         </div>
 <div class="col-lg-10 text-right mb-3 mt-3">
   {% if page.has_previous %}
-        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Пред.</a>
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">{% trans "Пред." %}</a>
     {% endif %}
 
-    <a href="?page=1" class="btn btn-secondary">Первая</a>
+    <a href="?page=1" class="btn btn-secondary">{% trans "Первая" %}</a>
 
     {% for num in news.paginator.page_range %}
 
@@ -59,10 +57,10 @@
         {% endif %}
     {% endfor %}
 
-    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Последняя</a>
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">{% trans "След." %}</a>
 
     {% if page.has_next %}
-        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">След.</a>
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">{% trans "След." %}</a>
     {% endif %}
-    </div>
+</div>
      {% endblock %}
