--- a/uurukg/app/templates/detail.html
+++ b/uurukg/app/templates/detail.html
@@ -3,46 +3,80 @@
 {% load embed_video_tags %}
 {% load static %}
 
-    <div class="container-fluid mx-auto">
-        <div class="row">
-            <div class="col-lg-7 mx-auto">
-                <h4>{{ post.category.title }}</h4>
-                <h2 class="text-center">{{ post.title }}</h2>
-                <div class="col">
-                    <div class="text-dark"> {{ post.overview | safe }}</div>
-    <!--                 <img src="{{ post.image.url | safe }}">-->
-                </div>
+<!--    <div class="container-fluid mx-auto">-->
+<!--        <div class="row">-->
+<!--            <div class="col-lg-7 mx-auto">-->
+<!--                <h4>{{ post.category.title }}</h4>-->
+<!--                <h2 class="text-center">{{ post.title }}</h2>-->
+<!--                <div class="col">-->
+<!--                    <div class="text-dark"> {{ post.overview | safe }}</div>-->
+<!--    &lt;!&ndash;                 <img src="{{ post.image.url | safe }}">&ndash;&gt;-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-1"></div>-->
+<!--            <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">-->
+<!--                <div class="row mx-5">-->
+<!--                    <div class="row mx-auto pb-5 pt-5">-->
+<!--                        <form action="/blog/search/" method="post">-->
+<!--                        {% csrf_token %}-->
+<!--                        <fieldset>-->
+<!--                            <legend>Коррупционеры и ОПГ</legend>-->
+<!--                            <p>Поиск по ФИО:</p>-->
+<!--                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"-->
+<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
+<!--                            <div class="py-1"></div>-->
+<!--                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"-->
+<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
+<!--                            <p class="mt-3">Поиск по должности:</p>-->
+<!--                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"-->
+<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
+<!--                            <br>-->
+<!--                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>-->
+<!--                        </fieldset>-->
+<!--                    </form>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+
+<div class="container-fluid mx-auto">
+    <div class="row">
+        <div class="col-lg-7 mx-auto">
+            <a class="text-title-style"> Вы находитесь в разделе: {{ post.category.title }}</a>
+            <h2 class="text-center pt-5 pb-4">{{ post.title }}</h2>
+            <div class="col">
+                <div class="text-dark"> {{ post.overview | safe }}</div>
+<!--                 <img src="{{ post.image.url | safe }}">-->
             </div>
-            <div class="col-1"></div>
-            <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
-                <div class="row mx-5">
-                    <div class="row mx-auto pb-5 pt-5">
-                        <form action="/blog/search/" method="post">
-                            {% csrf_token %}
-                            <fieldset>
-                                <legend>Коррупционеры и ОПГ</legend>
-                                <p>Поиск по ФИО:</p>
-                                <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
-                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                                <p class="mt-3">Поиск по должности:</p>
-                                <input type="text" name="position" placeholder="Должность..." class="responsive-input"
-                                       onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
-                                <br>
-                                <input type="submit" class="mt-3 btn" name="go" id="go" value="Поиск..."/>
-                            </fieldset>
-                        </form>
-                    </div>
+        </div>
+        <div class="col-1"></div>
+        <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
+            <div class="row mx-5">
+                <div class="row mx-auto pb-5 pt-5">
+              <form action="/blog/search/" method="post">
+                        {% csrf_token %}
+                        <fieldset>
+                            <legend>Коррупционеры и ОПГ</legend>
+                            <p>Поиск по ФИО:</p>
+                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <div class="py-1"></div>
+                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <p class="mt-3">Поиск по должности:</p>
+                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <br>
+                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>
+                        </fieldset>
+                    </form>
                 </div>
             </div>
         </div>
     </div>
-
-
-
-
+</div>
 <div class="container">
-  <h1>My Image Gallery</h1>
-
   <div class="row gallery">
       {% for p in post.newsImage.all %}
         <div class="col-lg-3 col-md-4 col-sm-6">
@@ -51,10 +85,7 @@
           </a>
         </div>
       {% endfor %}
-
-
   </div>
-
 </div>
 
 
