--- a/uurukg/app/templates/index.html
+++ b/uurukg/app/templates/index.html
@@ -35,12 +35,11 @@
             <div class="row mx-5">
                 <div class="row px-5 mt-5 pb-5">
                     <div class="py-2">
-                        <strong>Количество активных пользоваталей сейчас: <strong>{{ anonym }}</strong> </strong>
+                        <strong>{% trans "Количество активных пользоваталей сейчас" %}: <strong>{{ anonym }}</strong> </strong>
                     </div>
                     <form action="blog/search/" method="post">
                         {% csrf_token %}
                         <fieldset>
-
                             <legend>Коррупционеры и ОПГ</legend>
                             <p>Поиск по ФИО:</p>
                             <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"
@@ -64,8 +63,8 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="section-title">
-                                    <h4 class="m-0 text-uppercase font-weight-bold" id="news">Последние новости</h4>
-                                    <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">Смотреть все</a>
+                                    <h4 class="m-0 text-uppercase font-weight-bold" id="news">{% trans "Последние новости" %}</h4>
+                                    <a class="text-secondary font-weight-medium text-decoration-none" href="news/all">{% trans "Смотреть все" %}</a>
                                 </div>
                             </div>
                             {% for i in posts %}
@@ -88,7 +87,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center">
-                                            <a href="post/{{i.id}}">Читать поробнее...</a>
+                                            <a href="post/{{i.id}}">{% trans "Читать подробнее" %}...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -108,7 +107,7 @@
                                 <div class="section-title">
                                     <h4 class="m-0 text-uppercase font-weight-bold" id="economica">Экономика</h4>
                                     <a class="text-secondary font-weight-medium text-decoration-none"
-                                       href="economic/all">Смотреть все</a>
+                                       href="economic/all">{% trans "Смотреть все" %}</a>
                                 </div>
                             </div>
                             {% for i in newsEconom %}
@@ -133,7 +132,7 @@
                                         <div class="d-flex align-items-center">
 <!--                                            <a href="post/{{i.id}}">Читать поробнее...</a>-->
                                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                               href="post/{{i.id}}">Читать поробнее...</a>
+                                               href="post/{{i.id}}">{% trans "Читать подробнее" %}...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -153,7 +152,7 @@
                                 <div class="section-title">
                                     <h4 class="m-0 text-uppercase font-weight-bold" id="criminal">Преступления</h4>
                                     <a class="text-secondary font-weight-medium text-decoration-none"
-                                       href="criminal/all">Смотреть все</a>
+                                       href="criminal/all">{% trans "Смотреть все" %}</a>
                                 </div>
                             </div>
                             {% for i in newsCriminal %}
@@ -179,7 +178,7 @@
 <!--                                            <a href="post/{{i.id}}">Читать поробнее...</a>-->
 <!--                                            <a href="post/{{i.id}}">Читать поробнее...</a>-->
                                              <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                               href="post/{{i.id}}">Читать поробнее...</a>
+                                               href="post/{{i.id}}">{% trans "Читать подробнее" %}...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -199,8 +198,7 @@
                             <div class="col-12">
                                 <div class="section-title">
                                     <h4 class="m-0 text-uppercase font-weight-bold" id="sport">Спорт</h4>
-                                    <a class="text-secondary font-weight-medium text-decoration-none" href="sport/all">Смотреть
-                                        все</a>
+                                    <a class="text-secondary font-weight-medium text-decoration-none" href="sport/all">{% trans "Смотреть все" %}</a>
                                 </div>
                             </div>
                             {% for i in newsSport %}
@@ -226,7 +224,7 @@
                                         <div class="d-flex align-items-center">
 <!--                                            <a href="/post/{{i.id}}">Читать поробнее...</a>-->
                                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                               href="post/{{i.id}}">Читать поробнее...</a>
+                                               href="post/{{i.id}}">{% trans "Читать подробнее" %}...</a>
                                         </div>
                                     </div>
                                 </div>
@@ -247,7 +245,7 @@
                                 <div class="section-title">
                                     <h4 class="m-0 text-uppercase font-weight-bold" id="news_sng">Новости СНГ</h4>
                                     <a class="text-secondary font-weight-medium text-decoration-none"
-                                       href="sng/all">Смотреть все</a>
+                                       href="sng/all">{% trans "Смотреть все" %}</a>
                                 </div>
                             </div>
                             {% for i in sng %}
@@ -274,7 +272,7 @@
                                         <div class="d-flex align-items-center">
 <!--                                            <a href="sng/{{i.id}}">Читать поробнее...</a>-->
                                             <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                               href="/sng/{{i.id}}">Читать поробнее...</a>
+                                               href="/sng/{{i.id}}">{% trans "Читать подробнее" %}...</a>
                                         </div>
                                     </div>
                                 </div>
