--- a/uurukg/app/templates/opg.html
+++ b/uurukg/app/templates/opg.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block page_content %}
-
+{% load i18n %}
 {% load static %}
 <div class="py-3 ml-2 mr-2 ">
 <h2 class="text-center">ОПГ</h2>
@@ -29,11 +29,12 @@
 </div>
 </div>
 
-{% if page.has_previous %}
-        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">Previous</a>
+<div class="col-lg-10 text-right mb-3 mt-3">
+  {% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}" class="btn btn-secondary mx-2">{% trans "Пред." %}</a>
     {% endif %}
 
-    <a href="?page=1" class="btn btn-secondary">First</a>
+    <a href="?page=1" class="btn btn-secondary">{% trans "Первая" %}</a>
 
     {% for num in news.paginator.page_range %}
 
@@ -44,11 +45,12 @@
         {% endif %}
     {% endfor %}
 
-    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">Last</a>
+    <a href="?page={{page.paginator.num_pages}}" class="btn btn-secondary mx-2">{% trans "След." %}</a>
 
     {% if page.has_next %}
-        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">Next</a>
+        <a href="?page={{page.next_page_number}}" class="btn btn-secondary mx-2">{% trans "След." %}</a>
     {% endif %}
+</div>
 
 {% endblock %}
 
