--- a/uurukg/app/templates/release_detail.html
+++ b/uurukg/app/templates/release_detail.html
@@ -26,18 +26,21 @@
         <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
             <div class="row mx-5">
                 <div class="row mx-auto pb-5 pt-5">
-                    <form action="/blog/search/" method="post">
+                       <form action="/blog/search/" method="post">
                         {% csrf_token %}
                         <fieldset>
                             <legend>Коррупционеры и ОПГ</legend>
                             <p>Поиск по ФИО:</p>
-                            <input type="text" name="name" placeholder="Инициалы..." class="responsive-input"
+                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"
+                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
+                            <div class="py-1"></div>
+                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"
                                    onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
                             <p class="mt-3">Поиск по должности:</p>
                             <input type="text" name="position" placeholder="Должность..." class="responsive-input"
                                    onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
                             <br>
-                            <input type="submit" class="mt-3 btn" name="go" id="go" value="Поиск..."/>
+                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>
                         </fieldset>
                     </form>
                 </div>
