--- a/uurukg/app/templates/base.html
+++ b/uurukg/app/templates/base.html
@@ -53,21 +53,38 @@
         </div>
     </div>
 
-    <div class="row align-items-center bg-white py-3 px-lg-5">
-        <div class="col-lg-4">
-            <a href="/" class="navbar-brand p-0 d-none d-lg-block">
-                <h1 class="m-0 display-4 text-uppercase text-primary">УУРУ<span
-                        class="text-secondary font-weight-normal"><small>.НЕТ</small></span></h1>
-            </a>
-        </div>
-        <div class="col-lg-7 text-right">
-            <i style="color: red">Китайцы расстреливают коррупцию, <br>а мы убиваем её информационно.</i>
-        </div>
+<!--    <div class="row align-items-center bg-white py-3 px-lg-5">-->
+<!--        <div class="col-lg-4">-->
+<!--            <a href="/" class="navbar-brand p-0 d-none d-lg-block">-->
+<!--                <h1 class="m-0 display-4 text-uppercase text-primary">УУРУ<span-->
+<!--                        class="text-secondary font-weight-normal"><small>.НЕТ</small></span></h1>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--        <div class="col-lg-7 text-right">-->
+<!--            <i style="color: red">Китайцы расстреливают коррупцию, <br>а мы убиваем её информационно.</i>-->
+<!--        </div>-->
+<!--        <div class="col-lg-8 text-center text-lg-right">-->
+<!--            <a href="https://htmlcodex.com"><img class="img-fluid" src="img/ads-728x90.png" alt=""></a>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+        <div class="row align-items-center bg-white py-3 px-lg-5">
+    <div class="col-lg-4">
+        <a href="/" class="navbar-brand p-0 d-none d-lg-block">
+            <img src="{% static 'img/favicon.ico' %}" alt="Логотип сайта" width="100" height="100">
+            <h1 class="display-4 col-3 text-uppercase text-primary" style="display: inline-block; vertical-align: middle; margin-left: 10px;">
+                УУРУ<span class="text-secondary font-weight-normal"><small>.НЕТ</small></span>
+            </h1>
+        </a>
+    </div>
+<!--    <div class="col-lg-7 text-right">-->
+<!--        <i style="color: red">Китайцы расстреливают коррупцию, <br>а мы убиваем её информационно.</i>-->
+<!--    </div>-->
+</div>
         <div class="col-lg-8 text-center text-lg-right">
             <a href="https://htmlcodex.com"><img class="img-fluid" src="img/ads-728x90.png" alt=""></a>
         </div>
     </div>
-</div>
 <!-- Topbar End -->
 
 
