--- a/uurukg/app/templates/criminal.html
+++ b/uurukg/app/templates/criminal.html
@@ -31,7 +31,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center btn">
-                                            <a href="/post/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"  >Читать поробнее...</a>
+                                            <a href="/post/{{i.id}}" class="btn btn-secondary mx-2">Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
