--- a/uurukg/app/templates/all_news.html
+++ b/uurukg/app/templates/all_news.html
@@ -30,8 +30,8 @@
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
-                                        <div class="d-flex align-items-center btn">
-                                            <a href="/post/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"  >Читать поробнее...</a>
+                                        <div class="d-flex align-items-center">
+                                            <a href="/post/{{i.id}}" class="btn btn-secondary mx-2" >Читать поробнее...</a>
                                         </div>
                                     </div>
                                 </div>
