--- a/uurukg/app/templates/korrupcia.html
+++ b/uurukg/app/templates/korrupcia.html
@@ -30,7 +30,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center btn">
-                                            <a href="/post/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"  >Читать поробнее...</a>
+                                            <a href="/post/{{i.id}}" class="btn btn-secondary mx-2">{% trans 'Читать подробнее' %}...</a>
                                         </div>
                                     </div>
                                 </div>
