--- a/uurukg/app/templates/release.html
+++ b/uurukg/app/templates/release.html
@@ -32,8 +32,8 @@
                                     <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                         <div class="d-flex align-items-center">
                                         </div>
-                                        <div class="d-flex align-items-center btn mt-5"">
-                                            <a href="/release/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"  >Читать поробнее...</a>
+                                        <div class="d-flex align-items-center mt-5">
+                                            <a href="/release/{{i.id}}" class="btn btn-secondary mx-2">{% trans 'Читать подробнее' %}...</a>
                                         </div>
                                     </div>
                                 </div>
