--- a/uurukg/app/templates/sng.html
+++ b/uurukg/app/templates/sng.html
@@ -31,7 +31,7 @@
                                         <div class="d-flex align-items-center">
                                         </div>
                                         <div class="d-flex align-items-center btn">
-                                            <a href="/sng/{{i.id}}" class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2">{% trans "Читать подробнее" %}...</a>
+                                            <a href="/sng/{{i.id}}" class="btn btn-secondary mx-2">{% trans "Читать подробнее" %}...</a>
                                         </div>
                                     </div>
                                 </div>
