--- a/uurukg/app/templates/detail.html
+++ b/uurukg/app/templates/detail.html
@@ -2,43 +2,9 @@
 {% block page_content %}
 {% load embed_video_tags %}
 {% load static %}
+{% load i18n %}
 
-<!--    <div class="container-fluid mx-auto">-->
-<!--        <div class="row">-->
-<!--            <div class="col-lg-7 mx-auto">-->
-<!--                <h4>{{ post.category.title }}</h4>-->
-<!--                <h2 class="text-center">{{ post.title }}</h2>-->
-<!--                <div class="col">-->
-<!--                    <div class="text-dark"> {{ post.overview | safe }}</div>-->
-<!--    &lt;!&ndash;                 <img src="{{ post.image.url | safe }}">&ndash;&gt;-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="col-1"></div>-->
-<!--            <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">-->
-<!--                <div class="row mx-5">-->
-<!--                    <div class="row mx-auto pb-5 pt-5">-->
-<!--                        <form action="/blog/search/" method="post">-->
-<!--                        {% csrf_token %}-->
-<!--                        <fieldset>-->
-<!--                            <legend>Коррупционеры и ОПГ</legend>-->
-<!--                            <p>Поиск по ФИО:</p>-->
-<!--                            <input type="text" name="surname" placeholder="Фамилия..." class="responsive-input"-->
-<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
-<!--                            <div class="py-1"></div>-->
-<!--                            <input type="text" name="name" placeholder="Имя..." class="responsive-input"-->
-<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
-<!--                            <p class="mt-3">Поиск по должности:</p>-->
-<!--                            <input type="text" name="position" placeholder="Должность..." class="responsive-input"-->
-<!--                                   onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>-->
-<!--                            <br>-->
-<!--                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>-->
-<!--                        </fieldset>-->
-<!--                    </form>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
+
 
 <div class="container-fluid mx-auto">
     <div class="row">
@@ -51,9 +17,11 @@
             </div>
         </div>
         <div class="col-1"></div>
-        <div class="col-lg-3s border border-warning mr-0 mt-5 mx-auto" style="max-height: 350px">
+        <div class="col-lg-3s border border-warning mx-auto" style="max-height: 350px">
             <div class="row mx-5">
                 <div class="row mx-auto pb-5 pt-5">
+                    <div class="container">
+
               <form action="/blog/search/" method="post">
                         {% csrf_token %}
                         <fieldset>
@@ -68,9 +36,16 @@
                             <input type="text" name="position" placeholder="Должность..." class="responsive-input"
                                    onfocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;"/>
                             <br>
-                            <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>
+                            <div class="row-3"> <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/> </div>
                         </fieldset>
                     </form>
+
+                        <div class="row-4">
+                        <a class="btn text-secondary font-weight-medium text-decoration-none" href="/dop/all/">{% trans "Смотреть все" %}...</a>
+                    </div>
+<!--                     <div>-->
+<!--                    <a class="text-secondary font-weight-medium text-decoration-none" href="/dop/all/">{% trans "Смотреть все" %}...</a>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
