--- a/uurukg/app/templates/release_detail.html
+++ b/uurukg/app/templates/release_detail.html
@@ -43,6 +43,9 @@
                             <input type="submit" class="btn mt-4" name="go" id="go" value="Поиск..."/>
                         </fieldset>
                     </form>
+                     <div class="py-4">
+                    <a class="text-secondary font-weight-medium text-decoration-none" href="dop/all">{% trans "Смотреть все" %}...</a>
+                    </div>
                 </div>
             </div>
         </div>
