--- a/uurukg/app/templates/sng_detail.html
+++ b/uurukg/app/templates/sng_detail.html
@@ -37,6 +37,9 @@
                             <input type="submit" class="mt-3 btn" name="go" id="go" value="Поиск..."/>
                         </fieldset>
                     </form>
+                     <div class="py-4">
+                    <a class="text-secondary font-weight-medium text-decoration-none" href="dop/all">{% trans "Смотреть все" %}...</a>
+                    </div>
                 </div>
             </div>
         </div>
